# wallet-mpc

./: .gitignore  .gitmodules  ACCOUNT_ID_UPGRADE.md  Architecture Design for an MPC-Powered Asset Collection and Refund System.md  Architecture-Design-for-an-MPC-Powered-Asset-Collection-and-Refund-System.md  Cargo.toml  HD_WALLET_UPGRADE.md  README.md  REFACTORING.md  Sign service in enclave.md  Sign-service-in-enclave.md  build.sh  client_key_shares.json  key_share_1.json  key_share_2.json  release.sh  rust-toolchain.toml  service_key_shares.json  service_key_shares.json.age
.cargo/: config.toml
client/: Cargo.toml  README.md  build.rs
client/src/: lib.rs  main.rs  mpc_client.udl  signer.rs
config/: client.yaml  sign-gateway.yaml  sign-service.yaml
docs/: kms-attestation-policy.md  kmstool-enclave-cli.md  safe_prime_optimization.md
key-gen/: Cargo.toml  ENCRYPTION.md  README.md
key-gen/benches/: dealer_generate_shares.rs
key-gen/src/: dealer.rs  lib.rs  main.rs
mpc-client/: Cargo.toml  README.md
mpc-client/src/: lib.rs  mpc_client.udl  signer.rs
participant/: Cargo.toml  key_share_1.json  key_share_2.json  key_share_3.json  seed_info.json
participant/sample/: signing.rs
participant/src/: client.rs  config.rs  external_verifier.rs  lib.rs  main.rs  signing.rs
proto/: Cargo.toml  build.rs
proto/proto/: mpc.proto
proto/src/: lib.rs
scripts/sign-gateway/: Dockerfile  README.md  build-docker.sh  build_server.sh  run-docker.sh  stop-docker.sh
scripts/sign-service/: Dockerfile  README.md  build-docker.sh  build-eif.sh  build_server.sh  enclave-entrypoint.sh  run-enclave.sh  stop-enclave.sh
sign-gateway/: Cargo.toml  README.md
sign-gateway/src/: config.rs  grpc.rs  main.rs
sign-service/: Cargo.local.toml  Cargo.toml  README.md  rust-toolchain.toml
sign-service/src/: config.rs  main.rs  service.rs
sse/: Cargo.toml  README.md
sse/src/: config.rs  lib.rs  main.rs
