[workspace]
members = [
    "participant",
    "sse", 
    "client",
    "sign-service",
    "proto"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["wallet-mpc team"]

[workspace.dependencies]
dotenv = "0.15.0"
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.28"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
prost-types = "0.14.1"
tonic = "0.14.2"
prost = "0.14.1"
futures = "0.3.31"
thiserror = "2.0.16"