[workspace]
members = [
    "client",
    "mpc-client",
    "sign-service",
    "sign-gateway",
    "participant",
    "proto",
    "sse",
    "key-gen",
    "vendor/fast-paillier",
]
resolver = "2"

[patch.crates-io]
gmp-mpfr-sys = { path = "./vendor/gmp-mpfr-sys" }
fast-paillier = { path = "./vendor/fast-paillier" }

[workspace.package]
version = "0.1.0"
edition = "2021"  # 使用 2021 edition 以兼容 UniFFI

[workspace.dependencies]
dotenv = "0.15.0"
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.28"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
prost-types = "0.14.1"
tonic = "0.14.2"
prost = "0.14.1"
futures = "0.3.31"
thiserror = "2.0.16"
uniffi = "0.28.0"
