[package]
name = "client"
version.workspace = true
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

# Ethereum related
alloy = "1.0.34"
alloy-consensus = "1.0.42"
hex = "0.4.3"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }

# Internal dependencies
mpc-client = { path = "../mpc-client" }
