[package]
name = "client"
version.workspace = true
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
anyhow = { workspace = true }
serde_yaml = "0.9.34"
serde_json = { workspace = true }

# Ethereum related
alloy = "1.0.34"
alloy-consensus = "1.0.42"
hex = "0.4.3"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }

# Internal dependencies
mpc-client = { path = "../mpc-client" }
