[package]
name = "mpc-client"
version.workspace = true
edition = "2021" # UniFFI 还不支持 2024 edition，使用 2021

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "mpc_client"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { workspace = true, features = ["tokio", "cli", "scaffolding-ffi-buffer-fns"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

# Internal dependencies
participant = { path = "../participant" }
proto = { path = "../proto" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
