[package]
name = "participant"
version.workspace = true
edition.workspace = true

[lib]
name = "participant"

[dependencies]
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
# Replace surf with reqwest using rustls-tls to avoid OpenSSL dependency
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json", "stream"] }
reqwest-eventsource = "0.6.0"
async-sse = "5.1.0"
tokio-util = { version = "0.7", features = ["io", "compat"] }
round-based = "0.4.1"
cggmp21 = { version = "0.6.2", features = ["curve-secp256k1", "hd-wallet", "hd-slip10"] }
rand = "0.8.0"
sha2 = "0.10.9"
thiserror.workspace = true
generic-ec = "0.4.5"
tonic = { workspace = true }
proto = { path = "../proto" }
dotenv = { workspace = true }
alloy = "1.0.34"
secp256k1 = { version = "0.26", features = ["global-context", "bitcoin-hashes"] }

[dependencies.gmp-mpfr-sys]
version = "1.6.8"
default-features = false
features = ["force-cross"]
