[package]
name = "sign-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
sse = { path = "../sse" }
dotenv.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yaml = "0.9"
proto = { path = "../proto" }
tonic.workspace = true
prost.workspace = true
thiserror.workspace = true
